@@ -1,3 +1,7 @@
+09/27/2003 Bob Rossi <bob@brasko.net>
+
+   * cgdb.c: process_commands, TGDB_UPDATE_BREAKPOINTS case
+
 09/26/2003 Bob Rossi <bob@brasko.net>
 
    * cgdb.c: process_commands, changed case TGDB_ABSOLUTE_SOURCE_ACCEPTED and
